Renommage classe boucing-box

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <button class="animated-button">Hover Me!</button>
-        <div class="bouncing-box"></div>
+        <div class="bouncing"></div>
     </div>
 </body>
 </html>
